# mr_summarize_bot

./: .env.sample  Dockerfile  README.md  main.py  pyproject.toml
mr/: mr.py  settings.py  slack_bot.py
tests/: test_get_message.py
