[tool.poetry]
name = "mr-summarize-bot"
version = "0.1.0"
description = ""
authors = ["Marcos <marcos@tiqets.com>"]
readme = "README.md"
packages = [{include = "mr_summarize_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
slack-bolt = "^1.18.1"
requests = "^2.31.0"
openai = "^1.14.1"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
